--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "mobx-form",
-  "version": "1.0.0",
+  "name": "@rtomchinsky/mobx-form",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "@types/react": "^16.0.2",
     "lodash": "^4.17.4",
     "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2",
     "react": "^15.6.1"
   }
 }
