--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "tsc"
+    "prepare": "rimraf lib && tsc"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +15,14 @@
     "@types/lodash": "^4.14.73",
     "@types/react": "^16.0.2",
     "ava": "^0.22.0",
+    "rimraf": "^2.6.1",
     "typescript": "^2.4.2"
   },
   "dependencies": {
     "lodash": "^4.17.4",
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
-    "react": "^15.6.1"
+    "react": "^15.6.1",
+    "rxjs": "^5.4.3"
   }
 }
