--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rtomchinsky/mobx-form",
-  "version": "0.2.3",
+  "version": "0.3.0-0",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
