--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
     "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "rxjs": "^5.4.3"
+  },
+  "peerDependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
