--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "rxjs": "^5.4.3"
   },
   "peerDependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "^15.0.0 || ^16.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0"
   },
   "nyc": {
     "include": [
