--- a/package.json
+++ b/package.json
@@ -15,24 +15,28 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/lodash": "^4.14.73",
-    "@types/react": "^16.0.2",
+    "@types/lodash": "^4.14.107",
+    "@types/react": "^16.3.11",
+    "@types/react-dom": "^16.0.5",
     "ava": "^0.22.0",
+    "mobx": "^4.2.0",
+    "mobx-react": "^5.0.0",
     "nyc": "^11.2.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "rimraf": "^2.6.1",
-    "typescript": "^2.5.3"
+    "rxjs": "^5.5.10",
+    "typescript": "^2.8.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4",
-    "mobx": "^3.2.2",
-    "mobx-react": "^4.2.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "rxjs": "^5.4.3"
+    "lodash": "^4.17.4"
   },
   "peerDependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "^15.6.1 || ^16.0.0",
+    "react-dom": "^15.6.1 || ^16.0.0",
+    "mobx": "^4.2.0",
+    "mobx-react": "^5.0.0",
+    "rxjs": "^5.5.0"
   },
   "ava": {
     "source": [
