--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@types/lodash": "^4.14.107",
     "@types/react": "^16.3.11",
     "@types/react-dom": "^16.0.5",
-    "ava": "^0.22.0",
+    "ava": "^1.4.1",
     "mobx": "^4.2.0",
     "mobx-react": "^5.0.0",
-    "nyc": "^11.2.1",
+    "nyc": "^13.3.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "rimraf": "^2.6.1",
@@ -29,7 +29,7 @@
     "typescript": "^2.8.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.11"
   },
   "peerDependencies": {
     "react": "^15.6.1 || ^16.0.0",
@@ -39,7 +39,7 @@
     "rxjs": "^5.5.0"
   },
   "ava": {
-    "source": [
+    "sources": [
       "lib/**/*.{js|jsx}"
     ]
   },
